@@ -1,4 +1,6 @@
 Current:
+Ryan C. Gordon (Gunnar Games) - Wed Sep 27 00:26:41 EDT 2006
+ * Carbon code now completely supports Unicode.
 Ryan C. Gordon (Procedural Arts) - Sun Aug  6 07:43:51 EDT 2006
  * Changed most of the Carbon code to use UTF-8.
  * Added requireosx attribute to install tag.
